--- a/main/docker-compose.yml
+++ b/main/docker-compose.yml
@@ -6,6 +6,29 @@ services:
     container_name: api-server
     env_file:
       - ../.env
+    ports:
+      - 9000:9000
     volumes:
-      - ../server:/app/src
+      - ../server/src:/app/src
+      # - /app/node_modules
     restart: always
+
+  clien:
+    build: 
+      context: ../clien
+      dockerfile: Dockerfile-dev
+    container_name: web-clien
+    stdin_open: true
+    tty: true
+    environment: 
+      - CHOKIDAR_USEPOLLING=true
+    ports:
+      - 8080:8080
+    # volumes:
+    #   - ../clien/src:/usr/app/src
+    #   - ../clien/.env.local:/usr/app/.env.local
+    #   - ../clien/vue.config.js:/usr/app/vue.config.js
+    restart: always
+  
+  
+
